Wed Apr 27 11:02:59 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Time_Value.inl:
        * ace/Time_Value.cpp:
          Corrected some casts to use time_t

Wed Apr 27 09:01:11 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Improved this file

Tue Apr 26 09:38:05 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Improved this file

Tue Apr 26 08:17:40 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Improved this file

Sat Apr 23 12:31:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Stream.cpp:
          Fixed incorrect ACE_NEW_RETURN macro

Fri Apr 22 19:05:19 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.cpp (strnew):
          Removed null check, ACE_NEW_RETURN already does that

Fri Apr 22 15:19:29 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Add support for XL C++ 11.

Fri Apr 22 12:43:18 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * protocols/tests/HTBP/HTBP_Config.conf:
        * protocols/tests/HTBP/Reactor_Tests/inside.conf:
        * tests/Service_Config_Test.WCHAR_T.conf:
          Fuzz: Added $Id string

Fri Apr 22 11:16:57 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Removed autoconf support

Fri Apr 22 07:25:57 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ace/MMAP_Memory_Pool.cpp:
        * ace/OS_NS_stdlib.cpp:
          Layout changes

        * Kokyu/tests/DSRT_MIF/svc.conf:
        * apps/Gateway/Gateway/svc.conf:
        * apps/Gateway/Peer/svc.conf:
        * apps/JAWS/server/svc.conf:
        * apps/JAWS3/jaws3/jaws.conf:
        * apps/JAWS3/small/jaws.conf:
        * apps/JAWS3/small/svc.conf:
        * examples/APG/Logging/client.conf:
        * examples/APG/Logging/logging_strategy.conf: